--- a/monitoring/deployment/Dockerfile
+++ b/monitoring/deployment/Dockerfile
@@ -1,32 +1,31 @@
-# MLflow Model Deployment Dockerfile
+# FastAPI Model Deployment Dockerfile
 FROM python:3.12-slim
-
-# Set working directory
-WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    build-essential \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Install MLflow and dependencies
-COPY requirements.txt .
+# Create and set working directory
+WORKDIR /app
+
+# Copy and install Python dependencies
+COPY deployment/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY app.py .
 
-# Copy model artifacts (will be mounted or copied)
-ENV MODEL_URI="models:/HouseRentalPredictor/1"
-ENV MLFLOW_TRACKING_URI="http://localhost:5001"
+# Copy trained model
+COPY ../models/house_rental_best_model.pkl /app/house_rental_best_model.pkl
 
 # Expose port
 EXPOSE 5002
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost:5002/health || exit 1
+# HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    # CMD curl -f http://localhost:5002/health || exit 1
 
 # Run FastAPI application with uvicorn
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5002", "--workers", "1"]
+#CMD ["python", "app.py"]
