--- a/monitoring/deployment/requirements.txt
+++ b/monitoring/deployment/requirements.txt
@@ -1,9 +1,7 @@
-mlflow==3.6.0
-scikit-learn==1.5.2
-pandas==2.2.3
-numpy==2.1.3
-gunicorn==23.0.0
+scikit-learn==1.3.2
+pandas>=2.0.0
+numpy>=1.24.0
 prometheus-client==0.21.0
 fastapi==0.123.0
 uvicorn==0.38.0
-psutil
+psutil==7.1.3
